--- a/koii/task-template/package.json
+++ b/koii/task-template/package.json
@@ -29,9 +29,10 @@
     "chalk": "^5.3.0",
     "cross-spawn": "^7.0.3",
     "d3": "^7.9.0",
-    "dotenv": "^16.3.0",
+    "dotenv": "^16.4.7",
     "dotenv-webpack": "^8.1.0",
     "gpu.js": "^2.16.0",
+    "mongodb": "^6.12.0",
     "nodemon": "^3.1.7",
     "onnxjs": "^0.1.8",
     "onnxruntime-node": "^1.20.1",
